# fighter

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/Martial Hero 2/Sprites/: SpriteSheet.xcf
assets/Martial Hero/Sprites/: SpriteSheet.xcf
browser/: Cargo.toml
browser/pkg/: browser.js  browser_bg.js  browser_bg.wasm.d.ts  package.json
browser/src/: lib.rs
browser/www/: index.html  index.js  package-lock.json  package.json
desktop/: Cargo.toml
desktop/src/: main.rs
game/: Cargo.toml
game/src/: common.rs  countdown_timer.rs  game_over_menu.rs  health.rs  lib.rs  main_menu.rs  menu.rs  player.rs  scene.rs
native/: Cargo.toml
src/: common.rs  main.rs  player.rs  scene.rs
