[workspace]
resolver = "2" # Bevy + wgpu need this!
members = ["game", "browser", "desktop"]

[profile.dev]
opt-level = 1 # Small amount of optimization in debug mode

[profile.dev.package."*"]
opt-level = 3 # High optimizations for dependencies (incl. Bevy), but not for our code

[profile.release]
lto = "thin"
opt-level = "s" # Small code size
